--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Toko Agung Sembako"
 APP_ENV=local
-APP_KEY=base64:TTnmfzBP1OxYnZcu6vozyVFksb7AjXStLJAMDd79+Jo=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://127.0.0.1:8000
