--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 APP_NAME="Toko Agung Sembako"
 APP_ENV=local
-APP_KEY=base64:TTnmfzBP1OxYnZcu6vozyVFksb7AjXStLJAMDd79+Jo=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://127.0.0.1:8000
@@ -24,7 +24,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=pos_tokoagung
 DB_USERNAME=root
-DB_PASSWORD=Fajar
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
